Strip the query part when fetching the favicon.ico

This CL changes the creation of the URL used to get the favicon at the
root of the WebSite (www.website.com/favicon.ico), which is used to get
a favicon if non is provided in the html of the page.
It strips the query part of the URL, to avoid re-downloading a new
favicon everytime the query part of the URL changes.

Bug: 804077
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I1d6224af357065ab749031ca3533d5f5a5d092ff
Reviewed-on: https://chromium-review.googlesource.com/889739
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532900}
Former-commit-id: b67d11ca0a63a3437d6ac95cb34353d1283d8c5a