ios/web/web_state/ui/crw_web_controller.mm
@@ -2458,6 +2458,8 @@ registerLoadRequestForURL:(const GURL&)requestURL
       if (originGURL.is_valid() && originGURL.SchemeIsHTTPOrHTTPS()) {
         GURL::Replacements replacements;
         replacements.SetPathStr("/favicon.ico");
+        replacements.ClearQuery();
+        replacements.ClearRef();
         urls.push_back(web::FaviconURL(
             originGURL.ReplaceComponents(replacements),
             web::FaviconURL::IconType::kFavicon, std::vector<gfx::Size>()));
